Search by platform name in get all route
